# mathmentor

./: .env.example  .gitignore  .mcp.json  ACTIVE_TASK.md  AGENTS.md  LICENSE  README.md  RELEASE_CHECKLIST.md  SESSION_LOG.md  docker-compose.yml  qwen.py
.codex/: hooks.json
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f7_evidence_task_counts.py  a4fe3c90fb76_initial_schema.py  b7d4a2a01c8f_v1_events_and_provenance.py  b8e4f1a2c3d9_slice_details_json.py  c0d1e2f3a4b5_mentor_note_delivered_at.py  c9f1e2a4b8d0_task_bank.py  d1a2b3c4e5f6_topic_program_phase.py  e2b3c4d5f6a7_task_source_url.py  f3c4d5e6a7b8_mentor_notes.py
backend/app/: config.py  main.py
backend/app/application/: ports.py  use_cases.py
backend/app/domain/: enums.py  figures.py  models.py  policies.py  probability_visual.py  program.py
backend/app/infrastructure/: db.py  figures_render.py  llm.py  models.py  repositories.py
backend/scripts/: llm_review_gate.py  night_queue.json  night_runner.py  release_smoke.py  seed.py  simulate_student_flow.py
backend/tests/: conftest.py  test_bot.py  test_daily_queue.py  test_diagnostics_progress.py  test_drill.py  test_figures.py  test_grader.py  test_llm_gate.py  test_llm_normalization.py  test_local_model_e2e.py  test_mcp_sandbox.py  test_policies.py  test_probability_visual.py  test_program.py  test_scores.py  test_slice_topic.py  test_student_simulation.py  test_task_bank_mcp.py  test_topic_lifecycle.py  test_v1_flow.py
backend/tests/scenarios/: error_categories.yaml
(+40 files in other folders)
