[project]
name = "ege-mentor-backend"
version = "0.1.0"
description = "Family EGE preparation mentor backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "alembic>=1.13",
  "httpx>=0.27"
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "ruff>=0.6", "mypy>=1.11"]
bot = ["aiogram>=3.10", "aiohttp-socks>=0.9"]
mcp = ["mcp>=1.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
